レスポンシブ

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         </div>
     
         <div class="contents pure-g center-horizon">
-            <div class="pure-u-sm-1-2 pure-u-1 contentt liver-image liver-image-left">
+            <div class="pure-u-sm-1-2 pure-u-1 content liver-image liver-image-left">
                 <img src="assets/images/1722877075332 2.png" alt="" class="center">
             </div>
             <div class="pure-u-sm-1-2 pure-u-1 content">
