--- a/index.html
+++ b/index.html
@@ -35,25 +35,32 @@
         </header>
     
         <div class="contents pure-g center-horizon height-800px">
-            <div class="pure-u-1-2 content height-800px">
-                <div class="description description-blue center">
+            <div class="pure-u-1-2 content height-800px description-pococha">
+                <div class="description description-blue center-horizon">
                     <div class="center text-left">
                         <span>
                             <strong>Pococha</strong>というライブ配信<br>アプリでギター演奏や雑談を<br>してます！🎸✨<br>配信者とリスナーが<br><strong>コミュニケーション</strong>を楽しむ<br>アプリです！
                         </span>
                     </div>
                 </div>
-                <div class="description description-blue center">
+                <div class="description description-comment center-horizon">
+                    <div class="center text-left">
+                        <span>
+                            Pococha初めてで何をしたらい<br>いのか分からない
+                        </span>
+                    </div>
+                </div>
+                <div class="description description-comment center-horizon">
+                    <div class="center text-left">
+                        <span>
+                            でもみんなと盛り上がりたい！
+                        </span>
+                    </div>
+                </div>
+                <div class="description description-blue center-horizon">
                     <div class="center text-left">
                         <span>
                             <strong>BOX</strong>を開けるとアイテムに使う<br><strong>コイン</strong>を無料でもらえます！<br>演奏時にお好きな<strong>アイテム</strong>を<br>投げて配信を更に盛り上げ<br>ましょう🎶
-                        </span>
-                    </div>
-                </div>
-                <div class="description description-blue center">
-                    <div class="center text-left">
-                        <span>
-                            <strong>Pococha</strong>というライブ配信<br>アプリでギター演奏や雑談を<br>してます！🎸✨<br>配信者とリスナーが<br><strong>コミュニケーション</strong>を楽しむ<br>アプリです！
                         </span>
                     </div>
                 </div>
@@ -85,15 +92,13 @@
                         <div class="smartphone-frame">
                             <img src="assets/images/pngwing.com 1.png" alt="" class="center">
                             <div class="c-firework"></div>
-                            <!-- <img src="assets/images/ha-to_pink10.png" alt="" class="center heart"
-                                style="width: 100px; height: auto; left: 0%; animation: moveAlongPath 6s ease-in infinite;">
-                            <img src="assets/images/ha-to_pink10.png" alt="" class="center heart"
-                                style="width: 70px; height: auto; left: 5%; top: 45%; animation: moveAlongPath 5s ease-in infinite;">
-                            <img src="assets/images/yXWefsQaMMgbQ7B1726633753_1726633757.png" alt="" class="center heart"
-                                style="width: 50px; height: auto; left: 25%; top: 50%; animation: moveAlongPath 7s ease-in infinite;">
-                            <img src="assets/images/yXWefsQaMMgbQ7B1726633753_1726633757.png" alt="" class="center heart"
-                                style="width: 50px; height: auto; left: 18%; top: 40%; animation: moveAlongPath 8s ease-in infinite;"> -->
                         </div>
+                    </div>
+                    <div class="heart">
+                        <img src="assets/images/ha-to_pink10.png" alt="" class="center-horizon">
+                        <img src="assets/images/ha-to_pink10.png" alt="" class="center-horizon">
+                        <img src="assets/images/yXWefsQaMMgbQ7B1726633753_1726633757.png" alt="" class="center-horizon">
+                        <img src="assets/images/yXWefsQaMMgbQ7B1726633753_1726633757.png" alt="" class="center-horizon">
                     </div>
                 </div>
             </div>
