--- a/index.html
+++ b/index.html
@@ -36,28 +36,28 @@
     
         <div class="contents pure-g center-horizon height-800px">
             <div class="pure-u-1-2 content height-800px description-pococha">
-                <div class="description description-blue center-horizon">
+                <div class="description description-blue center-horizon description-blue-1">
                     <div class="center text-left">
                         <span>
                             <strong>Pococha</strong>というライブ配信<br>アプリでギター演奏や雑談を<br>してます！🎸✨<br>配信者とリスナーが<br><strong>コミュニケーション</strong>を楽しむ<br>アプリです！
                         </span>
                     </div>
                 </div>
-                <div class="description description-comment center-horizon">
+                <div class="description description-comment center-horizon description-comment-1">
                     <div class="center text-left">
                         <span>
                             Pococha初めてで何をしたらい<br>いのか分からない
                         </span>
                     </div>
                 </div>
-                <div class="description description-comment center-horizon">
+                <div class="description description-comment center-horizon description-comment-2">
                     <div class="center text-left">
                         <span>
                             でもみんなと盛り上がりたい！
                         </span>
                     </div>
                 </div>
-                <div class="description description-blue center-horizon">
+                <div class="description description-blue center-horizon description-blue-2">
                     <div class="center text-left">
                         <span>
                             <strong>BOX</strong>を開けるとアイテムに使う<br><strong>コイン</strong>を無料でもらえます！<br>演奏時にお好きな<strong>アイテム</strong>を<br>投げて配信を更に盛り上げ<br>ましょう🎶
