--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 <body>
     <!-- スプラッシュスクリーンに動画を表示 -->
     <div class="splash" id="splash">
-        <!-- <video src="assets/movies/Player One.mp4" autoplay muted playsinline id="intro-video"></video> -->
+        <div class="splash-background"></div>
+        <div class="video-container">
+            <video src="assets/movies/Player One.mp4" autoplay muted playsinline id="intro-video"></video>
+        </div>
     </div>
 
     <link rel="preload" href="assets/images/backgroundImage.jpg" as="image">
@@ -26,7 +29,7 @@
     <link rel="preload" href="assets/images/backgroundImage_white.jpg" as="image">
     <link rel="preload" href="assets/images/backgroundImage_yellow.jpg" as="image">
 
-    <div id="main-content">
+    <div id="main-content" style="display: none;">
         
         <div class="background-image"></div>
     
@@ -39,7 +42,7 @@
                 <div class="description description-blue center-horizon description-blue-1">
                     <div class="center text-left">
                         <span>
-                            <strong>Pococha</strong>というライブ配信<br>アプリでギター演奏や雑談を<br>してます！🎸✨<br>配信者とリスナーが<br><strong>コミュニケーション</strong>を楽しむ<br>アプリです！
+                            <strong>Pococha</strong>というライブ配信<br>アプリでギター演奏や雑談を<br>しているHAMです！🎸✨<br><strong>Pococha</strong>は配信者とリスナーが<br><strong>コミュニケーション</strong>を楽しむ<br>アプリです！
                         </span>
                     </div>
                 </div>
