--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="description description-blue center-horizon description-blue-2">
                     <div class="center text-left">
                         <span>
-                            <strong>BOX</strong>を開けるとアイテムに使う<br><strong>コイン</strong>を無料でもらえます！<br>演奏時にお好きな<strong>アイテム</strong>を<br>投げて配信を更に盛り上げ<br>ましょう🎶
+                            <strong>BOX</strong>を開けるとアイテムに使う<br><strong>コイン</strong>を無料でもらえます！<br>演奏時にハート等の<strong>アイテム</strong>を<br>投げて配信を更に盛り上げ<br>ましょう🎶
                         </span>
                     </div>
                 </div>
