--- a/index.html
+++ b/index.html
@@ -16,12 +16,18 @@
 
 <body>
     <!-- スプラッシュスクリーンに動画を表示 -->
-    <div class="splash" id="splash">
+    <!-- <div class="splash" id="splash">
         <div class="splash-background"></div>
         <div class="video-container">
-            <video src="assets/movies/Player One.mp4" autoplay muted playsinline id="intro-video"></video>
+            <video src="assets/movies/Player One (7).mp4" autoplay muted playsinline id="intro-video"></video>
         </div>
         <div id="skip-button">Skip</div>
+    </div> -->
+
+    <div id="splash-screen" class="splash-container">
+        <img id="splash-logo" src="assets/images/jAG2tuNapc2Dfrj1730988233_1730988251.png" alt="ロゴ">
+        <div class="splash-background-image"></div>
+
     </div>
 
     <link rel="preload" href="assets/images/backgroundImage.jpg" as="image">
@@ -77,15 +83,10 @@
                             <!-- Additional required wrapper -->
                             <div class="swiper-wrapper">
                                 <!-- Slides -->
-                                <div class="swiper-slide">
-                                    <img src="assets/images/image 10.png" alt="" class="center">
-                                </div>
-                                <div class="swiper-slide">
-                                    <img src="assets/images/image 11.png" alt="" class="center">
-                                </div>
-                                <div class="swiper-slide">
-                                    <img src="assets/images/image 12.png" alt="" class="center">
-                                </div>
+                                <div class="swiper-slide"><img src="assets/images/image 10.png" alt="" class="center"></div>
+                                <div class="swiper-slide"><img src="assets/images/image 11.png" alt="" class="center"></div>
+                                <div class="swiper-slide"><img src="assets/images/image 12.png" alt="" class="center">
+                            </div>
     
                             </div>
                             <!-- If we need paginatio n-->
