--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             </div>
             <div class="pure-u-1">
                 <div class="description-white center-horizon">
-                    <span><strong>Liverさん</strong>に興味のある方は<br>下の公式ラインからご相談ください✨</span>
+                    <span><strong>配信活動(Vtuber含む)</strong>に興味のある方は<br>下の公式ラインからご相談ください✨</span>
                 </div>
                 <div class="sns-link center-horizon">
                     <a href="https://line.me/R/ti/p/@125enpee?oat_content=url" target="_blank">
